[workspace]
members = [
    "node",
    "node/cli",
    "node/service",
    #"pallets/template",
    "runtime/common",
    "runtime/development",
    "primitives/common",
    "runtime/common", 
    "chain_extensions/rand",
]
[workspace.package]
authors = ["tranthiainhi303@gmail.com"]
homepage = "https://substrate.io/"
edition = "2021"
license = "MIT-0"
publish = false
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"


[workspace.dependencies]
# General deps
# (wasm)
codec = {package = "parity-scale-codec", version = "3.4.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }
log = { version = "0.4.17", default-features = false }
static_assertions = "1.1.0"

# third-party dependencies
clap = { version = "4.2.5", features = ["derive"]}
jsonrpsee = { version = "0.23.2" }
jsonrpsee-core = { version = "0.23.2" }
futures = "0.3.21"
rand = "0.8"
# pallet-asset-conversion: turn on "num-traits" feature
primitive-types = { version = "0.12.0", default-features = false, features = ["codec", "scale-info", "num-traits"] }
# (native)
array-bytes = { version = "6.2.2", default-features = false }

serde = { version = "1.0.197", default-features = false }
serde-big-array = { version = "0.3.2" }
serde_derive = { version = "1.0.117" }
serde_json = { version = "1.0.114", default-features = false }
serde_yaml = { version = "0.9" }

# Substrate
# (wasm)
sp-keyring = { default-features = false,  git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}

sc-cli = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
sc-network-common = { default-features = false,  git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
sc-network = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
sc-executor = { default-features = false,  git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
sc-service = { default-features = false,  git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
sc-telemetry = { default-features = false,  git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
sc-rpc = {default-features = false,  git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
sc-transaction-pool = {default-features = false,  git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
sc-transaction-pool-api = { default-features = false,  git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
sc-consensus-aura = {default-features = false,  git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
sc-consensus-babe = {default-features = false,  git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
sc-consensus-babe-rpc = {default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
sc-consensus = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
grandpa = { default-features = false, package = "sc-consensus-grandpa",  git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
sc-consensus-grandpa-rpc = {default-features = false,  git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
sc-client-api = { default-features = false,  git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
sc-rpc-api = {default-features = false,  git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
sc-rpc-spec-v2 = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
sc-basic-authorship = {default-features = false,  git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
sc-network-sync = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
sc-authority-discovery = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
sc-chain-spec = { default-features = false,  git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
sc-sync-state-rpc = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
sc-consensus-slots = {default-features = false,  git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
grandpa-primitives = {default-features = false, package = "sp-consensus-grandpa",  git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
sp-consensus = {default-features = false,  git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
#sp-consensus-beefy = { default-features = false,  git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
sp-timestamp = { default-features = false,  git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}

# These dependencies are used for the node template's RPCs
sp-core = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
sp-io = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
sp-runtime = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
sp-std = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
sp-api = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
sp-authority-discovery = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
sp-block-builder = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
sp-blockchain = {  git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
sp-consensus-babe = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
sp-consensus-aura = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
sp-consensus-grandpa = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
sp-keystore = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
sp-inherents = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
sp-offchain = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
sp-session = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
sp-trie = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
sp-transaction-storage-proof = {  git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
sp-transaction-pool = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
sp-staking = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
sp-version = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
substrate-frame-rpc-system = {  git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
substrate-state-trie-migration-rpc = {  git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
mmr-rpc = {  git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
sp-genesis-builder = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}

# frame dependencies
frame-executive = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
frame-support = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
frame-system = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
frame-election-provider-support = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
frame-system-rpc-runtime-api = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
# Used for runtime benchmarking
frame-benchmarking = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
frame-system-benchmarking = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
frame-try-runtime = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
frame-benchmarking-cli = {  git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
# CLI-specific dependencies

# Substrate pallets
# (wasm)
pallet-assets = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
pallet-aura = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
pallet-authority-discovery = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
pallet-authorship = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
pallet-alliance = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
pallet-asset-rate = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
#pallet-asset-conversion = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
pallet-babe = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
pallet-balances = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
pallet-bags-list = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
pallet-bounties = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
pallet-child-bounties = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
pallet-collective = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
pallet-contracts = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
pallet-conviction-voting = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
pallet-core-fellowship = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
pallet-election-provider-multi-phase = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
pallet-elections-phragmen = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
pallet-democracy = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
pallet-fast-unstake = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
pallet-glutton = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
pallet-grandpa = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
pallet-identity = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
pallet-im-online = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
pallet-indices = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
pallet-insecure-randomness-collective-flip = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
pallet-lottery = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
pallet-membership = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
pallet-message-queue = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
pallet-multisig = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
pallet-mmr = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
pallet-nfts = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
pallet-nomination-pools = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
pallet-nomination-pools-runtime-api = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
#pallet-nft-fractionalization = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
pallet-nis = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
pallet-ranked-collective = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
pallet-recovery = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
pallet-referenda = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
pallet-remark = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
pallet-root-testing = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
pallet-offences = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
pallet-preimage = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
pallet-proxy = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
pallet-session = {  default-features = false, features = ["historical"], git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
pallet-salary = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
pallet-society = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
pallet-staking-reward-curve = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
pallet-staking = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
pallet-state-trie-migration = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
pallet-scheduler = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
pallet-sudo = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
pallet-tips= {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
pallet-timestamp = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
pallet-transaction-payment = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
pallet-transaction-storage = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
pallet-transaction-payment-rpc = { default-features = false,  git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
pallet-transaction-payment-rpc-runtime-api = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
pallet-asset-tx-payment = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
pallet-treasury = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
pallet-utility = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
pallet-uniques = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
pallet-whitelist = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
pallet-vesting = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}

# Node
service = {  package = "nativex-service", path = "./node/service" }

# Local Dependencies
pallet-template = {  default-features = false, path = "./pallets/template" }

# Chain extension
nativex-rand-extension = {  default-features = false, path = "./chain_extensions/rand" }

# Local Runtime
runtime-common = { path = "./runtime/common", default-features = false }
development-runtime = { path = "./runtime/development", default-features = false }
common-primitives = {path = "./primitives/common", default-features = false}

# Build deps
substrate-wasm-builder = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"}
substrate-build-script-utils = {  git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-2"} 

[profile.release]
panic = "unwind"
