[package]
name = "nativex-cli"
version = "4.0.0-dev"
build = "build.rs"
description = "A fresh FRAME-based Substrate node, ready for hacking."
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
# third-party dependencies
array-bytes = { workspace = true }
clap = { workspace = true ,  optional = true }
parity-scale-codec = { workspace = true }
serde = { workspace = true }
jsonrpsee ={ workspace = true }
futures = { workspace = true }
log = { workspace = true }
rand = { workspace = true }

sp-core = { workspace = true , optional = true }
sp-keyring = { workspace = true , optional = true }
sp-runtime = { workspace = true , optional = true }


sc-cli = { workspace = true , optional = true }
sc-service = { workspace = true , optional = true }
grandpa = { workspace = true , optional = true }
sp-consensus-grandpa = { workspace = true , optional = true }
sc-client-api = { workspace = true , optional = true }
sp-inherents = { workspace = true , optional = true }
sp-timestamp = { workspace = true , optional = true }

# These dependencies are used for runtime benchmarking
frame-benchmarking = { workspace = true }
frame-benchmarking-cli = { workspace = true , optional = true }

# CLI-specific dependencies
try-runtime-cli = { workspace = true , optional = true }
#node-inspect = { workspace = true }
pallet-transaction-payment = { workspace = true , optional = true }
frame-system = { workspace = true , optional = true }

# Local Dependencies
development-runtime = { workspace = true, optional = true}
common-primitives = { workspace = true }

service = {  workspace = true,  optional = true}

[build-dependencies]
clap = { version = "4.2.5", optional = true }
clap_complete = { version = "4.5.6", optional = true }
#node-inspect = { workspace = true }
frame-benchmarking-cli = { workspace = true }
sc-cli = { workspace = true }
substrate-build-script-utils = { workspace = true }

[features]
default = ["cli"]
cli = [
	"service",
	"development-runtime",
	#"node-inspect",
	"sp-runtime",
	"sp-inherents",
	"sp-core",
	"sp-timestamp",
	"sc-cli",
	"sc-client-api",
	"sc-service",
	"sp-keyring",
	"grandpa",
	"sp-consensus-grandpa",
	"pallet-transaction-payment",
	"clap",
	"clap_complete",
	"frame-system",
	"frame-benchmarking-cli",
	"try-runtime-cli",
]

with-development-runtime = ["service/with-development-runtime"]