[package]
name = "common-primitives"
version = "4.0.0-dev"
description = "A fresh FRAME-based Substrate node, ready for hacking."
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-core = { workspace = true }
sp-runtime = { workspace = true }
log = {workspace = true}
scale-info = { workspace = true }

[features]
default = [ "std" ]
std = [
    "scale-info/std",
    "sp-core/std",
    "sp-runtime/std" ]
